displaying content from js, added adding, searching and filter functionality

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
   "cSpell.words": [
+    "Bendus",
+    "Pavlo",
+    "Tychkivskyi",
     "autogrow",
     "checkmark",
     "crossorigin",
+    "progressbar",
     "scrollbar",
     "truetype",
+    "valuenow",
     "webfont"
   ],
   "compile-hero.disable-compile-files-on-did-save-code": false
