added completion tick to real card

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,13 @@
 {
   "cSpell.words": [
     "Bendus",
+    "Hardnut",
     "Pavlo",
     "Tychkivskyi",
     "autogrow",
     "checkmark",
     "crossorigin",
+    "dropright",
     "progressbar",
     "scrollbar",
     "truetype",
